fix: Make showToast globally available and prevent XSS

--- a/public/index.html
+++ b/public/index.html
@@ -1597,15 +1597,26 @@
             document.getElementById('userTypeSection').style.display = 'block';
         }
 
-        // Toast
-        function showToast(message, type = 'success') {
+        // Toast (make it globally available)
+        window.showToast = function(message, type = 'success') {
             const container = document.getElementById('toastContainer');
+            if (!container) return; // Skip if container doesn't exist
+            
             const toast = document.createElement('div');
             toast.className = `toast ${type}`;
-            toast.innerHTML = `<span class="toast-message">${message}</span><button class="toast-close" onclick="this.parentElement.remove()">×</button>`;
+            // Use textContent for message to prevent XSS, innerHTML only for close button
+            const messageSpan = document.createElement('span');
+            messageSpan.className = 'toast-message';
+            messageSpan.textContent = message;
+            const closeBtn = document.createElement('button');
+            closeBtn.className = 'toast-close';
+            closeBtn.textContent = '×';
+            closeBtn.onclick = () => toast.remove();
+            toast.appendChild(messageSpan);
+            toast.appendChild(closeBtn);
             container.appendChild(toast);
             setTimeout(() => toast.remove(), 5000);
-        }
+        };
 
         // Viewer Signup - stays on vertikalapp.com, shows success
         async function handleViewerSignup(event) {
